<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SimpleProcessing"
        android:text="@string/simple_processing" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="WithPreference"
        android:text="@string/with_shared_preference" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="TransformationMap"
        android:text="@string/transformations_map" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="TransformationSwitch"
        android:text="@string/transformation_switch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="AddUser"
            android:text="@string/add_user" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ClearUsers"
            android:text="@string/clear_users" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="MediatorLiveData"
        android:text="@string/mediatorlivedata" />

</LinearLayout>